--- a/servers/node_2B/configuration/mgmt-groups.properties
+++ b/servers/node_2B/configuration/mgmt-groups.properties
@@ -20,3 +20,6 @@
 # The following illustrates how an admin user could be defined.
 #
 #admin=PowerUser,BillingAdmin,
+monitoring=read-only
+deployer=deployment
+admin=administration
