--- a/apps/minibankref1Test/src/main/resources/log4j.properties
+++ b/apps/minibankref1Test/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@
 #log4j.debug=true
 
 log4j.rootLogger=INFO, stdout
-log4j.logger.org.app.minibank=DEBUG
+log4j.logger.org.app.minibank=INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %x %-5p %c - %m%n
