Add Database test case with JMS

--- a/apps/minibankref1Test/pom.xml
+++ b/apps/minibankref1Test/pom.xml
@@ -52,5 +52,19 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.35</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<version>10.8.3.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
