--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -87,7 +87,7 @@
 								Unrecognized SSL message, plaintext connection?
 								this dependency has been added in the standalone-full-ha.xml file in the global-modules section
 								<manifestEntries>
-									<Dependencies>org.jboss.xnio</Dependencies>
+								<Dependencies>org.jboss.xnio</Dependencies>
 								</manifestEntries>
 							-->
 						</archive>
@@ -103,6 +103,13 @@
 				<groupId>org.jboss.spec</groupId>
 				<artifactId>jboss-javaee-6.0</artifactId>
 				<version>${version.jboss.spec.javaee.6.0}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.bom.eap</groupId>
+				<artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
+				<version>${version.jboss.bom.eap}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -150,6 +157,7 @@
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
 		<!-- For Clustered annotation -->
 		<dependency>
 			<groupId>org.jboss.ejb3</groupId>
@@ -186,12 +194,13 @@
 	</dependencies>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<version.jackson>2.3.0</version.jackson>
-		 <!--  EAP 6.2.GA -->
+		<!-- EAP 6.2.GA -->
 		<version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-7</version.jboss.spec.javaee.6.0>
+		<version.jboss.bom.eap>6.2.0.GA</version.jboss.bom.eap>
 		<version.jboss.as>7.3.0.Final-redhat-14</version.jboss.as>
 	</properties>
 </project>
