use H2 database for testing + add Oracle (if needed)

--- a/apps/minibankref1Test/src/main/resources/log4j.properties
+++ b/apps/minibankref1Test/src/main/resources/log4j.properties
@@ -5,8 +5,15 @@
 #To enable the debugging of log4j (not debugging of the application):
 #log4j.debug=true
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, file
 log4j.logger.org.app.minibank=INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %x %-5p %c - %m%n
+
+
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d %x %-5p %c - %m%n
+log4j.appender.file.append=false
+log4j.appender.file.File=./target/result.log
