--- a/apps/minibankref1Test/pom.xml
+++ b/apps/minibankref1Test/pom.xml
@@ -63,8 +63,19 @@
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derbyclient</artifactId>
-			<version>10.8.3.0</version>
+			<version>10.10.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<!-- Before using the oracle Drivers you will need to upload it in your maven repo -->
+		<!-- 
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.1</version>
+		</dependency>
+		 -->
 	</dependencies>
 </project>
