--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #################
-## Eclipse
+## Eclipse/IDEA
 #################
 
 *.pydevproject
@@ -15,6 +15,8 @@ local.properties
 .classpath
 .settings/
 .loadpath
+.idea
+*.iml
 
 # External tool builders
 .externalToolBuilders/
@@ -59,3 +61,6 @@ LogServer/
 servers/db/minibank
 servers/minibankDb.properties
 *.zip
+apps/atlassian-ide-plugin.xml
+
+
