--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -199,8 +199,8 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<version.jackson>2.3.0</version.jackson>
 		<!-- EAP 6.2.GA -->
-		<version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-7</version.jboss.spec.javaee.6.0>
-		<version.jboss.bom.eap>6.2.0.GA</version.jboss.bom.eap>
-		<version.jboss.as>7.3.0.Final-redhat-14</version.jboss.as>
+		<version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-10</version.jboss.spec.javaee.6.0>
+		<version.jboss.bom.eap>6.3.0.Beta1</version.jboss.bom.eap>
+		<version.jboss.as>7.4.0.Final-redhat-11</version.jboss.as>
 	</properties>
 </project>
