--- a/servers/node_2B/configuration/application-users.properties
+++ b/servers/node_2B/configuration/application-users.properties
@@ -1,6 +1,6 @@
 #
 # Properties declaration of users for the realm 'ApplicationRealm' which is the default realm
-# for application services on a new AS 7.1 installation.
+# for application services on a new installation.
 #
 # This includes the following protocols: remote ejb, remote jndi, web, remote jms
 #
@@ -27,4 +27,3 @@ guest=eed499a9be4555dbe4e96e6058b77a48
 appuser1=ff75d742afe155d57d7526502916e19a
 appuser2=f2d3affd12b1436693e4a42fa88aebb9
 appuser3=27a384a45b6ef9f08fc6640ee8b314d3
-
